feat: update favicon

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fff" />
+    <meta name="msapplication-TileColor" content="#28e6fc" />
     <meta
       name="description"
       content="Fake System Update Screens: Prank your friends and collagues with fake update screens!"
